syntax = "proto3";
option go_package = "github.com/taeho-io/auth";
package auth;

service Auth {
  rpc Auth (AuthRequest) returns (AuthResponse) {}
  rpc Verify (VerifyRequest) returns (VerifyResponse) {}
  rpc Refresh (RefreshRequest) returns (RefreshResponse) {}
  rpc Parse (ParseRequest) returns (ParseResponse) {}
}

message AuthRequest {
  int64 user_id = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  int64 user_id = 4;
}

message VerifyRequest {
  string access_token = 1;
}

message VerifyResponse {
  bool is_valid = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  int64 user_id = 4;
}

message ParseRequest {
  string access_token = 1;
}

message ParseResponse {
  int64 user_id = 1;
}
